# motionmedia

./: .gitignore  CMakeLists.txt  README.md  motionmedia.geany  videoplayer.cpp
Design/: .$Class Diagram.drawio.bkp  .$Class Diagram.drawio.dtmp  Class Diagram.drawio  Software Semantics and notes.drawio
src/: cameraissue.cpp  cameraissue.h  capture.cpp  capture.h  detectionresults.h  detector.cpp  detector.h  main.cpp  videoplayer.cpp  videoplayer.h
